{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 278,
  "lineage": "9ed9fcb5-f069-a54f-50e9-112f58ab0fba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nat_Jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-0fa0674004ce15d09",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fa0674004ce15d09",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-01ac9edf04e7b9d36",
            "private_dns": "ip-172-16-1-167.eu-west-1.compute.internal",
            "private_ip": "172.16.1.167",
            "public_dns": "ec2-34-241-211-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.211.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0633ac680655c9704",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0518c4789905a536a",
            "tags": {
              "Name": "Nat_JumpHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c29bfabfee466ff9"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Test_Instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-035944b39f6213740",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-035944b39f6213740",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-0818cfe80ddee03a8",
            "private_dns": "ip-172-16-2-183.eu-west-1.compute.internal",
            "private_ip": "172.16.2.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fa19c4b5ae300160",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07393e2409f448057",
            "tags": {
              "Name": "Test_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0679d656e3c73a92d"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.Priv",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04b5cb761af46518c",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_IGW"
            },
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Custom_Route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0551645dfa0a16faf",
            "owner_id": "893379205229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b5cb761af46518c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom_Route_table"
            },
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main_Route_Table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00e085db5608d73cb",
            "owner_id": "893379205229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0fa0674004ce15d09",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main_Route_Table"
            },
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_instance.Nat_Jump",
            "aws_key_pair.rufol",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f345e1d5d109efe0",
            "route_table_id": "rtb-00e085db5608d73cb",
            "subnet_id": "subnet-07393e2409f448057"
          },
          "dependencies": [
            "aws_instance.Nat_Jump",
            "aws_key_pair.rufol",
            "aws_route_table.Main_Route_Table",
            "aws_security_group.Nat_Jump",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036af5911ed2c272b",
            "route_table_id": "rtb-0551645dfa0a16faf",
            "subnet_id": "subnet-0518c4789905a536a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Custom_Route_table",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nat_Jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-0c29bfabfee466ff9",
            "description": "Allow All inbound traffic from EFREI \u0026 Home network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c29bfabfee466ff9",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.102.224.0/24",
                  "46.193.4.20/32",
                  "172.16.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Nat_Jump",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_subnet.sub_priv",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-0679d656e3c73a92d",
            "description": "Allow All inbound/outbound traffic from Public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0679d656e3c73a92d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Priv",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all from public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-07393e2409f448057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-07393e2409f448057",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Private"
            },
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-0518c4789905a536a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0518c4789905a536a",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Public"
            },
            "vpc_id": "vpc-031733d3530f4aab2"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:vpc/vpc-031733d3530f4aab2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0abad215ce1290a39",
            "default_route_table_id": "rtb-0f172c7b7b3422598",
            "default_security_group_id": "sg-0525f6555891ed684",
            "dhcp_options_id": "dopt-7b98cc1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-031733d3530f4aab2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f172c7b7b3422598",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD"
            }
          }
        }
      ]
    }
  ]
}